@@ -1,4 +1,6 @@
 ver 0.23.14 (not yet released)
+* decoder
+  - mad: fix calculation of LAME peak values
 
 ver 0.23.13 (2023/05/22)
 * input
